--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,5 +13,9 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Language: en-GB
+Imports:
+  shiny (>= 0.13),
+  miniUI (>= 0.1.1),
+  rstudioapi (>= 0.5)
 Suggests:
     testthat
