--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,8 +14,10 @@ Encoding: UTF-8
 LazyData: true
 Language: en-GB
 Imports:
-  shiny (>= 0.13),
-  miniUI (>= 0.1.1),
-  rstudioapi (>= 0.5)
+    DT,
+    miniUI (>= 0.1.1),
+    orderly,
+    rstudioapi (>= 0.5),
+    shiny (>= 0.13),
 Suggests:
     testthat
